vbnc/vbnc/vbnc/tests/Errors/30311-31.vb
Imports System
Class T
    Const M_String As uint32 = #1/1/2008#
End Class